syntax = "proto3";
option csharp_namespace = "So.Demo.Grpc.ClientFromProto";
package CustomerPackage;
import "Protos/bcl.proto"; // schema for protobuf-net's handling of core .NET types
import "Protos/protogen.proto"; // custom protobuf-net options

message Customer {
   option (.protobuf_net.msgopt).namespace = "So.Demo.Grpc.ClientFromProto";
   string String1 = 1;
   string String2 = 2;
   string String3 = 3;
   string String4 = 4;
   string String5 = 5;
   string String6 = 6;
   string String7 = 7;
   string String8 = 8;
   string String9 = 9;
   string String10 = 10;
   string String11 = 11;
   string String12 = 12;
   string String13 = 13;
   string String14 = 14;
   string String15 = 15;
   string String16 = 16;
   string String17 = 17;
   string String18 = 18;
   string String19 = 19;
   string String20 = 20;
   int32 Int1 = 21;
   int32 Int2 = 22;
   int32 Int3 = 23;
   int32 Int4 = 24;
   int32 Int5 = 25;
   int32 Int6 = 26;
   int32 Int7 = 27;
   int32 Int8 = 28;
   int32 Int9 = 29;
   int32 Int10 = 30;
   int32 Int11 = 31;
   int32 Int12 = 32;
   int32 Int13 = 33;
   int32 Int14 = 34;
   int32 Int15 = 35;
   int32 Int16 = 36;
   int32 Int17 = 37;
   int32 Int18 = 38;
   int32 Int19 = 39;
   int32 Int20 = 40;
   .bcl.DateTime DateTime1 = 41;
   .bcl.DateTime DateTime2 = 42;
   .bcl.DateTime DateTime3 = 43;
   .bcl.DateTime DateTime4 = 44;
   .bcl.DateTime DateTime5 = 45;
   .bcl.DateTime DateTime6 = 46;
   .bcl.DateTime DateTime7 = 47;
   .bcl.DateTime DateTime8 = 48;
   .bcl.DateTime DateTime9 = 49;
   .bcl.DateTime DateTime10 = 50;
   .bcl.DateTime DateTime11 = 51;
   .bcl.DateTime DateTime12 = 52;
   .bcl.DateTime DateTime13 = 53;
   .bcl.DateTime DateTime14 = 54;
   .bcl.DateTime DateTime15 = 55;
   .bcl.DateTime DateTime16 = 56;
   .bcl.DateTime DateTime17 = 57;
   .bcl.DateTime DateTime18 = 58;
   .bcl.DateTime DateTime19 = 59;
   .bcl.DateTime DateTime20 = 60;
   .bcl.Guid Guid1 = 61;
   .bcl.Guid Guid2 = 62;
   .bcl.Guid Guid3 = 63;
   .bcl.Guid Guid4 = 64;
   .bcl.Guid Guid5 = 65;
   .bcl.Guid Guid6 = 66;
   .bcl.Guid Guid7 = 67;
   .bcl.Guid Guid8 = 68;
   .bcl.Guid Guid9 = 69;
   .bcl.Guid Guid10 = 70;
   .bcl.Guid Guid11 = 71;
   .bcl.Guid Guid12 = 72;
   .bcl.Guid Guid13 = 73;
   .bcl.Guid Guid14 = 74;
   .bcl.Guid Guid15 = 75;
   .bcl.Guid Guid16 = 76;
   .bcl.Guid Guid17 = 77;
   .bcl.Guid Guid18 = 78;
   .bcl.Guid Guid19 = 79;
   .bcl.Guid Guid20 = 80;
   double Double1 = 81;
   double Double2 = 82;
   double Double3 = 83;
   double Double4 = 84;
   double Double5 = 85;
   double Double6 = 86;
   double Double7 = 87;
   double Double8 = 88;
   double Double9 = 89;
   double Double10 = 90;
   double Double11 = 91;
   double Double12 = 92;
   double Double13 = 93;
   double Double14 = 94;
   double Double15 = 95;
   double Double16 = 96;
   double Double17 = 97;
   double Double18 = 98;
   double Double19 = 99;
   double Double20 = 100;
   .bcl.Decimal Decimal1 = 101;
   .bcl.Decimal Decimal2 = 102;
   .bcl.Decimal Decimal3 = 103;
   .bcl.Decimal Decimal4 = 104;
   .bcl.Decimal Decimal5 = 105;
   .bcl.Decimal Decimal6 = 106;
   .bcl.Decimal Decimal7 = 107;
   .bcl.Decimal Decimal8 = 108;
   .bcl.Decimal Decimal9 = 109;
   .bcl.Decimal Decimal10 = 110;
   .bcl.Decimal Decimal11 = 111;
   .bcl.Decimal Decimal12 = 112;
   .bcl.Decimal Decimal13 = 113;
   .bcl.Decimal Decimal14 = 114;
   .bcl.Decimal Decimal15 = 115;
   .bcl.Decimal Decimal16 = 116;
   .bcl.Decimal Decimal17 = 117;
   .bcl.Decimal Decimal18 = 118;
   .bcl.Decimal Decimal19 = 119;
   .bcl.Decimal Decimal20 = 120;
}
message CustomersRequest {
   option (.protobuf_net.msgopt).namespace = "So.Demo.Grpc.ClientFromProto";
   int32 CustomersCount = 1;
}
message CustomersResponse {
   option (.protobuf_net.msgopt).namespace = "So.Demo.Grpc.ClientFromProto";
   repeated Customer Customers = 1;
   double Duration = 2;
}
service CustomerServiceGrpc {
   rpc GetCustomersAsync (CustomersRequest) returns (CustomersResponse);
}
